fix header order button

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 как мы работаем
               </a>
             <li class="nav__item">
-              <a href="#" class="nav__link">
+              <a href="#" class="nav__link nav__link-last">
                 контакты
               </a>
             </li>
