--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
+  <title>BURGERS</title>
 </head>
 <!DOCTYPE html>
 <html lang="ru">
@@ -80,7 +80,7 @@
             </div>
             <h1 class="hero__text">
               <span class="section-title">Мы Делаем</span>
-              <span class="hero__desc">Натуральные бургеры</span>
+              <span class="hero__desc">натуральные бургеры</span>
             </h1>
           </div>
         </div>
@@ -95,51 +95,39 @@
           </div>
           <ul class="best__list">
             <li class="best__item">
-              <div class="best__icon">
-                <svg class="best__icon-pic">
-                  <use xlink:href="./img/sprite/sprite.svg#meat"></use>
-                </svg>
-              </div>
               <div class="best__content">
+                <div class="best__img best__img--meat"></div>
                 <div class="best__title">
-                  100% Свежее мясо
+                  100% cвежее мясо
                 </div>
                 <div class="best__text">
-                  <p>
+                  <p class="best__text--p">
                     Драма представляет собой деструктивный цикл. Анапест представляет собой анапест. Ямб неравномерен.
                   </p>
                 </div>
               </div>
             </li>
             <li class="best__item">
-              <div class="best__icon">
-                <svg class="best__icon-pic">
-                  <use xlink:href="./img/sprite/sprite.svg#meat"></use>
-                </svg>
-              </div>
               <div class="best__content">
+                <div class="best__img best__img--hand"></div>
                 <div class="best__title">
                   Ручная сборка
                 </div>
                 <div class="best__text">
-                  <p>
+                  <p class="best__text--p">
                     Драма представляет собой деструктивный цикл. Анапест представляет собой анапест. Первое полустишие
                     притягивает сюжетный реформаторский пафос. </p>
                 </div>
               </div>
             </li>
             <li class="best__item">
-              <div class="best__icon">
-                <svg class="best__icon-pic">
-                  <use xlink:href="./img/sprite/sprite.svg#meat"></use>
-                </svg>
-              </div>
               <div class="best__content">
+                <div class="best__img best__img--natural"></div>
                 <div class="best__title">
                   Натуральные ингредиенты
                 </div>
                 <div class="best__text">
-                  <p>
+                  <p class="best__text--p">
                     Драма представляет собой деструктивный цикл. Анапест представляет собой анапест. </p>
                 </div>
               </div>
@@ -151,68 +139,70 @@
       <section class="section reviews">
         <ul class="reviews__list">
           <li class="reviews__item">
-            <img src="./img/Avatar-1.png" alt="Аватар 1">
+            <img src="./img/Avatar-1.png" class="avatar" alt="Аватар 1">
             <div class="reviews__hover">
               <div class="reviews__text">
-                <span class="user__name"> константин спилберг</span>
-                <p>Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что
+                <div class="user__name"> константин спилберг</div>
+                <p class="reviews__text--p">Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно
+                  забыть... Никогда не думал, что
                   булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</p>
               </div>
             </div>
           </li>
           <li class="reviews__item">
-            <img src="./img/Avatar-2.png" alt="Аватар 2">
+            <img src="./img/Avatar-2.png" class="avatar" alt="Аватар 2">
             <div class="reviews__hover">
-              <span class="user__name"> константин спилберг</span>
-              <p>Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что
+              <div class="user__name"> константин спилберг</div>
+              <p class="reviews__text--p">Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть...
+                Никогда не думал, что
                 булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</p>
             </div>
           </li>
           <li class="reviews__item">
-            <img src="./img/Avatar-3.png" alt="Аватар 3">
+            <img src="./img/Avatar-3.png" class="avatar" alt="Аватар 3">
             <div class="reviews__hover">
-              <span class="user__name"> константин спилберг</span>
-              <p>Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что
+              <div class="user__name"> константин спилберг</div>
+              <p class="reviews__text--p">Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что
                 булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</p>
             </div>
           </li>
           <li class="reviews__item">
-            <img src="./img/Avatar-4.png" alt="Аватар 4">
+            <img src="./img/Avatar-4.png" class="avatar" alt="Аватар 4">
             <div class="reviews__hover">
-              <span class="user__name"> константин спилберг</span>
-              <p>Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что
+              <div class="user__name"> константин спилберг</div>
+              <p class="reviews__text--p">Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что
                 булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</p>
             </div>
           </li>
           <li class="reviews__item">
-            <img src="./img/Avatar-5.png" alt="Аватар 5">
+            <img src="./img/Avatar-5.png" class="avatar" alt="Аватар 5">
             <div class="reviews__hover">
-              <span class="user__name"> константин спилберг</span>
-              <p>Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что
+              <div class="user__name"> константин спилберг</div>
+              <p class="reviews__text--p">Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что
                 булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</p>
             </div>
           </li>
           <li class="reviews__item">
-            <img src="./img/Avatar-6.png" alt="Аватар 6">
+            <img src="./img/Avatar-6.png" class="avatar" alt="Аватар 6">
             <div class="reviews__hover">
-              <span class="user__name"> константин спилберг</span>
-              <p>Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что
+              <div class="user__name"> константин спилберг</div>
+              <p class="reviews__text--p">Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что
                 булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</p>
             </div>
           </li>
           <li class="reviews__item">
-            <img src="./img/Avatar-7.png" alt="Аватар 7">
+            <img src="./img/Avatar-7.png" class="avatar" alt="Аватар 7">
             <div class="reviews__hover">
-              <span class="user__name"> константин спилберг</span>
-              <p>Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что
+              <div class="user__name"> константин спилберг</div>
+              <p class="reviews__text--p">Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что
                 булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</p>
             </div>
           </li>
           <li class="reviews__item">
-            <img src="./img/Avatar-8.png" alt="Аватар 8">
+            <img src="./img/Avatar-8.png" class="avatar"  alt="Аватар 8">
             <div class="reviews__hover">
-              <span class="user__name"> константин спилберг</span>
-              <p>Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что
+              <div class="user__name"> константин спилберг</div>
+              <p class="reviews__text--p">Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что
                 булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</p>
             </div>
           </li>
