--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <div class="wrapper">
     <header class="header">
       <a href="#" class="logo">
-        <img src="/img/logo.png" alt="логотип">
+        <img src="./img/logo.png" alt="логотип">
       </a>
       <div class="header__btns">
         <nav class="nav">
@@ -139,7 +139,7 @@
       <section class="section reviews">
         <ul class="reviews__list">
           <li class="reviews__item">
-            <img src="/img/Avatar-1.png" class="avatar" alt="Аватар 1">
+            <img src="./img/Avatar-1.png" class="avatar" alt="Аватар 1">
             <div class="reviews__hover">
               <div class="reviews__text">
                 <div class="user__name"> константин спилберг</div>
@@ -150,7 +150,7 @@
             </div>
           </li>
           <li class="reviews__item">
-            <img src="/img/Avatar-2.png" class="avatar" alt="Аватар 2">
+            <img src="./img/Avatar-2.png" class="avatar" alt="Аватар 2">
             <div class="reviews__hover">
               <div class="user__name"> константин спилберг</div>
               <p class="reviews__text--p">Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть...
@@ -159,7 +159,7 @@
             </div>
           </li>
           <li class="reviews__item">
-            <img src="/img/Avatar-3.png" class="avatar" alt="Аватар 3">
+            <img src="./img/Avatar-3.png" class="avatar" alt="Аватар 3">
             <div class="reviews__hover">
               <div class="user__name"> константин спилберг</div>
               <p class="reviews__text--p">Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть...
@@ -168,7 +168,7 @@
             </div>
           </li>
           <li class="reviews__item">
-            <img src="/img/Avatar-4.png" class="avatar" alt="Аватар 4">
+            <img src="./img/Avatar-4.png" class="avatar" alt="Аватар 4">
             <div class="reviews__hover">
               <div class="user__name"> константин спилберг</div>
               <p class="reviews__text--p">Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть...
@@ -177,7 +177,7 @@
             </div>
           </li>
           <li class="reviews__item">
-            <img src="/img/Avatar-5.png" class="avatar" alt="Аватар 5">
+            <img src="./img/Avatar-5.png" class="avatar" alt="Аватар 5">
             <div class="reviews__hover">
               <div class="user__name"> константин спилберг</div>
               <p class="reviews__text--p">Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть...
@@ -186,7 +186,7 @@
             </div>
           </li>
           <li class="reviews__item">
-            <img src="/img/Avatar-6.png" class="avatar" alt="Аватар 6">
+            <img src="./img/Avatar-6.png" class="avatar" alt="Аватар 6">
             <div class="reviews__hover">
               <div class="user__name"> константин спилберг</div>
               <p class="reviews__text--p">Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть...
@@ -195,7 +195,7 @@
             </div>
           </li>
           <li class="reviews__item">
-            <img src="/img/Avatar-7.png" class="avatar" alt="Аватар 7">
+            <img src="./img/Avatar-7.png" class="avatar" alt="Аватар 7">
             <div class="reviews__hover">
               <div class="user__name"> константин спилберг</div>
               <p class="reviews__text--p">Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть...
@@ -204,7 +204,7 @@
             </div>
           </li>
           <li class="reviews__item">
-            <img src="/img/Avatar-8.png" class="avatar" alt="Аватар 8">
+            <img src="./img/Avatar-8.png" class="avatar" alt="Аватар 8">
             <div class="reviews__hover">
               <div class="user__name"> константин спилберг</div>
               <p class="reviews__text--p">Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть...
@@ -216,7 +216,7 @@
       </section>
       <section class="map">
         <div class="map-img">
-          <img src="/img/map.png" alt="карта">
+          <img src="./img/map.png" alt="карта">
         </div>
       </section>
 
