--- a/index.html
+++ b/index.html
@@ -21,59 +21,60 @@
 
 <body>
   <div class="wrapper">
-    <header class="header">
-      <a href="#" class="logo">
-        <img src="./img/logo.png" alt="логотип">
-      </a>
-      <div class="header__btns">
-        <nav class="nav">
-          <ul class="nav__list">
-            <li class="nav__item">
-              <a href="#" class="nav__link">
-                о нас
-              </a>
-            </li>
-            <li class="nav__item">
-              <a href="#" class="nav__link">
-                бургеры
-              </a>
-            </li>
-            <li class="nav__item">
-              <a href="#" class="nav__link">
-                команда
-              </a>
-            </li>
-            <li class="nav__item">
-              <a href="#" class="nav__link">
-                меню
-              </a>
-            </li>
-            <li class="nav__item">
-              <a href="#" class="nav__link">
-                отзывы
-              </a>
-            <li class="nav__item">
-              <a href="#" class="nav__link">
-                как мы работаем
-              </a>
-            <li class="nav__item">
-              <a href="#" class="nav__link nav__link-last">
-                контакты
-              </a>
-            </li>
-            <li class="nav__item">
-              <a href="#" class="btn">
-                заказать
-              </a>
-            </li>
-      </div>
+    <div class="header__container">
+      <header class="header">
+        <a href="#" class="logo">
+          <img src="./img/logo.png" alt="логотип">
+        </a>
+        <div class="header__btns">
+          <nav class="nav">
+            <ul class="nav__list">
+              <li class="nav__item">
+                <a href="#" class="nav__link">
+                  о нас
+                </a>
+              </li>
+              <li class="nav__item">
+                <a href="#" class="nav__link">
+                  бургеры
+                </a>
+              </li>
+              <li class="nav__item">
+                <a href="#" class="nav__link">
+                  команда
+                </a>
+              </li>
+              <li class="nav__item">
+                <a href="#" class="nav__link">
+                  меню
+                </a>
+              </li>
+              <li class="nav__item">
+                <a href="#" class="nav__link">
+                  отзывы
+                </a>
+              <li class="nav__item">
+                <a href="#" class="nav__link">
+                  как мы работаем
+                </a>
+              <li class="nav__item">
+                <a href="#" class="nav__link nav__link-last">
+                  контакты
+                </a>
+              </li>
+              <li class="nav__item">
+                <a href="#" class="btn">
+                  заказать
+                </a>
+              </li>
+        </div>
+      </header>
+    </div>
 
-    </header>
+
     <div class="maincontent">
-
       <section class="section hero">
         <div class="container hero__container">
-
           <div class="hero__content">
             <div class="hero__pic">
               <img class="hero__pic-img" src="./img/burger.png" alt="Изображение бургера">
@@ -85,9 +86,7 @@
           </div>
         </div>
         <a href="#" class="arrow-down"></a>
-
       </section>
-
       <section class="section best section_centered">
         <div class="container">
           <div class="section-title section-title_color_black section-title_position_center">
@@ -135,6 +134,13 @@
           </ul>
         </div>
       </section>
+
+
+
+      <section class="menu">
+
+      </section>
+
 
       <section class="section reviews">
         <ul class="reviews__list">
