add all sections background

--- a/index.html
+++ b/index.html
@@ -137,9 +137,24 @@
 
 
 
-      <section class="menu">
+      <section class="slaider">
+        <div class="container slaider-container">
 
+        </div>
       </section>
+
+      <section class="team">
+        <div class="container team-container">
+
+        </div>
+      </section>
+
+      <section class="menu">
+        <div class="container menu-container">
+
+        </div>
+      </section>
+
 
 
       <section class="section reviews">
@@ -220,10 +235,23 @@
           </li>
         </ul>
       </section>
-      <section class="map">
-        <div class="map-img">
-          <img src="./img/map.png" alt="карта">
+
+      <section class="work">
+        <div class="container work-container">
+
         </div>
+      </section>
+
+      <section class="order">
+        <div class="container order-container">
+
+        </div>
+      </section>
+
+
+
+      <section class="map">
+        
       </section>
 
 </body>
