fix all mistakes from list

--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
   <div class="wrapper">
     <div class="header__container">
       <header class="header">
-        <a href="#" class="logo">
+        <div class="logo">
           <img src="./img/logo.png" alt="логотип">
-        </a>
+        </div>
         <div class="header__btns">
           <nav class="nav">
             <ul class="nav__list">
@@ -89,9 +89,10 @@
       </section>
       <section class="section best section_centered">
         <div class="container">
-          <div class="section-title section-title_color_black section-title_position_center">
+
+          <h2 class="section-title section-title_color_black section-title_position_center">
             Мы лучшие
-          </div>
+          </h2>
           <ul class="best__list">
             <li class="best__item">
               <div class="best__content">
@@ -145,7 +146,25 @@
 
       <section class="team">
         <div class="container team-container">
-
+          <div class="team-background">
+            <div class="team-content">
+              <h2 class="section-title section-team section-title_color_orange section-title_position_center">
+                команда
+              </h2>
+              <div class="team-content__acardeon">
+                <span class="team-content__name"> ричард джеймс </span>
+                <div class="team-content__acarden--info">
+                  <div class="image-container">
+                    <img class="team-content__img" src="/img/aphex.png" alt="фото члена команды">
+                  </div>
+                  <div class="team-content__text">
+                    Оператор <br>
+                    С радостью поможет подобрать идеальный бургер и оформить заказ.
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
       </section>
 
@@ -168,6 +187,9 @@
                   забыть... Никогда не думал, что
                   булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</p>
               </div>
+              <a href="#" class="btn btn-review">
+                подробнее
+              </a>
             </div>
           </li>
           <li class="reviews__item">
@@ -177,6 +199,9 @@
               <p class="reviews__text--p">Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть...
                 Никогда не думал, что
                 булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</p>
+              <a href="#" class="btn">
+                подробнее
+              </a>
             </div>
           </li>
           <li class="reviews__item">
@@ -186,6 +211,9 @@
               <p class="reviews__text--p">Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть...
                 Никогда не думал, что
                 булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</p>
+              <a href="#" class="btn btn-review">
+                подробнее
+              </a>
             </div>
           </li>
           <li class="reviews__item">
@@ -195,6 +223,9 @@
               <p class="reviews__text--p">Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть...
                 Никогда не думал, что
                 булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</p>
+              <a href="#" class="btn">
+                подробнее
+              </a>
             </div>
           </li>
           <li class="reviews__item">
@@ -204,6 +235,9 @@
               <p class="reviews__text--p">Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть...
                 Никогда не думал, что
                 булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</p>
+              <a href="#" class="btn">
+                подробнее
+              </a>
             </div>
           </li>
           <li class="reviews__item">
@@ -213,6 +247,9 @@
               <p class="reviews__text--p">Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть...
                 Никогда не думал, что
                 булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</p>
+              <a href="#" class="btn">
+                подробнее
+              </a>
             </div>
           </li>
           <li class="reviews__item">
@@ -222,6 +259,9 @@
               <p class="reviews__text--p">Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть...
                 Никогда не думал, что
                 булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</p>
+              <a href="#" class="btn">
+                подробнее
+              </a>
             </div>
           </li>
           <li class="reviews__item">
@@ -231,6 +271,9 @@
               <p class="reviews__text--p">Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть...
                 Никогда не думал, что
                 булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</p>
+              <a href="#" class="btn">
+                подробнее
+              </a>
             </div>
           </li>
         </ul>
@@ -251,7 +294,7 @@
 
 
       <section class="map">
-        
+
       </section>
 
 </body>
